--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
+    "apexcharts": "^3.35.4",
     "axios": "^0.21.1",
     "change-case": "^4.1.2",
     "date-fns": "^2.27.0",
@@ -36,6 +37,7 @@
     "numeral": "^2.0.6",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-helmet-async": "^1.2.0",
     "react-i18next": "^11.11.4",
@@ -43,6 +45,7 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.2",
+    "react-slick": "^0.28.0",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
